[package]
name = "chip8-emu"
version = "1.0.0"
authors = ["Thomas Hiscock <thomashk000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = { path = "../../packages/chip8" }
structopt = { version = "0.3", default-features = false }
sdl2 = "0.33"
gl = "0.14.0"
